tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/nan-incomplete-1.stderr
TOML parse error at line 1, column 20
  |
1 | nan-incomplete-1 = na
  |                    ^
invalid string
expected `"`, `'`
